{
  "version": 4,
  "terraform_version": "1.14.2",
  "serial": 146,
  "lineage": "2c0bea23-896a-7576-3cc5-4a8e7b800444",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c6b0656b807bf20",
            "arn": "arn:aws:ec2:us-east-1:269825205299:elastic-ip/eipalloc-08c6b0656b807bf20",
            "domain": "vpc",
            "id": "eipalloc-08c6b0656b807bf20",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-26-2-16.compute-1.amazonaws.com",
            "public_ip": "100.26.2.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "taskflow-eip"
            },
            "tags_all": {
              "Name": "taskflow-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.taskflow",
            "aws_vpc.taskflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "taskflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:internet-gateway/igw-0631e9fbf3df41a37",
            "id": "igw-0631e9fbf3df41a37",
            "owner_id": "269825205299",
            "tags": {
              "Name": "taskflow-igw"
            },
            "tags_all": {
              "Name": "taskflow-igw"
            },
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.taskflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "taskflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c6b0656b807bf20",
            "association_id": "eipassoc-0e65681a884d24c60",
            "connectivity_type": "public",
            "id": "nat-0aade76f732470c0a",
            "network_interface_id": "eni-04ebb7438a0fb883b",
            "private_ip": "10.0.1.67",
            "public_ip": "100.26.2.16",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d0976713a47bdf76",
            "tags": {
              "Name": "taskflow-nat"
            },
            "tags_all": {
              "Name": "taskflow-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.taskflow",
            "aws_subnet.public_1",
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:route-table/rtb-0d2d3ab4610b99f06",
            "id": "rtb-0d2d3ab4610b99f06",
            "owner_id": "269825205299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0aade76f732470c0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "taskflow-private-rt"
            },
            "tags_all": {
              "Name": "taskflow-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.taskflow",
            "aws_nat_gateway.taskflow",
            "aws_subnet.public_1",
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:route-table/rtb-0ea13e1bf4da72c94",
            "id": "rtb-0ea13e1bf4da72c94",
            "owner_id": "269825205299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0631e9fbf3df41a37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "taskflow-public-rt"
            },
            "tags_all": {
              "Name": "taskflow-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.taskflow",
            "aws_vpc.taskflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003b345b11c278103",
            "route_table_id": "rtb-0d2d3ab4610b99f06",
            "subnet_id": "subnet-0d0b7b05269c65b27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.taskflow",
            "aws_nat_gateway.taskflow",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01eddb724c634ea32",
            "route_table_id": "rtb-0d2d3ab4610b99f06",
            "subnet_id": "subnet-012a3b41a67785325"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.taskflow",
            "aws_nat_gateway.taskflow",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064a729e03c9c4caa",
            "route_table_id": "rtb-0ea13e1bf4da72c94",
            "subnet_id": "subnet-0d0976713a47bdf76"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.taskflow",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b30bc9cffcfd5605",
            "route_table_id": "rtb-0ea13e1bf4da72c94",
            "subnet_id": "subnet-077d0a7366920895f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.taskflow",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:security-group/sg-0fa7403fc23a6d91a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0fa7403fc23a6d91a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "taskflow-eks-20251217090353212000000007",
            "name_prefix": "taskflow-eks-",
            "owner_id": "269825205299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-eks-sg"
            },
            "tags_all": {
              "Name": "taskflow-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.taskflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:security-group/sg-032bf0ee77d78b9fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-032bf0ee77d78b9fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa7403fc23a6d91a"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "taskflow-redis-2025121709035984110000000a",
            "name_prefix": "taskflow-redis-",
            "owner_id": "269825205299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-redis-sg"
            },
            "tags_all": {
              "Name": "taskflow-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.taskflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:security-group/sg-05c6ef0c77ed02eaf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-05c6ef0c77ed02eaf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fa7403fc23a6d91a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "taskflow-rds-2025121709035984130000000b",
            "name_prefix": "taskflow-rds-",
            "owner_id": "269825205299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "taskflow-rds-sg"
            },
            "tags_all": {
              "Name": "taskflow-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.taskflow"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:subnet/subnet-0d0b7b05269c65b27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0b7b05269c65b27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269825205299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-private-1"
            },
            "tags_all": {
              "Name": "taskflow-private-1"
            },
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:subnet/subnet-012a3b41a67785325",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012a3b41a67785325",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "269825205299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-private-2"
            },
            "tags_all": {
              "Name": "taskflow-private-2"
            },
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:subnet/subnet-0d0976713a47bdf76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0976713a47bdf76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "269825205299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-public-1"
            },
            "tags_all": {
              "Name": "taskflow-public-1"
            },
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:subnet/subnet-077d0a7366920895f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077d0a7366920895f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "269825205299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "taskflow-public-2"
            },
            "tags_all": {
              "Name": "taskflow-public-2"
            },
            "vpc_id": "vpc-05665cbc9eeaea1e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.taskflow",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "taskflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:269825205299:vpc/vpc-05665cbc9eeaea1e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05669f717c675584a",
            "default_route_table_id": "rtb-0009ce70b975def08",
            "default_security_group_id": "sg-015b1a9b7223f69f9",
            "dhcp_options_id": "dopt-0af7cc3a4b7456397",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05665cbc9eeaea1e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0009ce70b975def08",
            "owner_id": "269825205299",
            "tags": {
              "Name": "taskflow-vpc"
            },
            "tags_all": {
              "Name": "taskflow-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}